Fixed z-index of map and nav.

--- a/project/client/src/css/mapContainer.css
+++ b/project/client/src/css/mapContainer.css
@@ -6,5 +6,6 @@
 .leaflet-container {
     height: 300px;
     width: 100%;
+    z-index: 0;
     /* float: right; */
   }
